<resources>
    <string name="app_name">Liftdom</string>
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
    <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>
    <string name="facebook_app_id">600330026825683</string>
    <string name="currentVersion">Liftdom v1.39</string>
    <string name="releaseNotesTitle">Liftdom v1.39 Release Notes:</string>
    <string name="newFeaturesTitle">New Features:</string>
    <string name="newFeaturesText">
    </string>
    <string name="fixesTitle">Bug Fixes:</string>
    <string name="fixesText">
        Various bug/crash fixes.
    </string>
    <string name="workingOnTitle">What I\'m Working On:</string>
    <string name="workingOnText">
        Add more pre-made programs.\n
        Look further into push notifications.\n
        Performance increases.
    </string>
    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">CLICK BUTTON TO SIGN IN WITH FACEBOOK</string>
    <string name="main_nav_menu_default_user_text">
        \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020
    </string>
    <string name="content_helper_error_title">No Content Viewer</string>
    <string name="content_helper_error_no_app">No Viewing App exists for content type \'%s\'.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forumUnderConstruction">Forum Under Construction</string>
    <string name="soForNowFollowLifters">So for now, follow some fellow lifters!</string>
    <string name="followSomeFellowLifters">Follow some fellow lifters!</string>
    <string name="contactMeBugs">Contact me at <b>liftdomapp@gmail.com</b> about any bugs or questions.
    </string>
    <string name="viewMoreUsers">View more users&#8230;</string>
    <string name="pleaseWait">Please wait or results may not be saved&#8230;</string>
    <string name="waDisclaimer">Check off each set as you go, or simply use this
        page as a reference during your workout and use the \"Check off all&#8230;\" option when
        you\'re done.</string>
    <string name="percent">%</string>
    <string name="percentOf">% of</string>
    <string name="squat">Squat:</string>
    <string name="benchPress">Bench Press:</string>
    <string name="deadlift">Deadlift:</string>
    <string name="exerciseMaxes">Exercise Maxes</string>
    <string name="noMaxesFound">No exercise maxes found.\nThey are automatically recorded when you complete a
        workout.
    </string>
    <string name="smolov">Smolov</string>
    <string name="wendler531forBeginners">Wendler 5/3/1 For Beginners</string>
    <string name="W531fBTitleText1">Wendler 5/3/1</string>
    <string name="W531fBTitleText2">(For Beginners)</string>
    <string name="W531fBName">Wendler\'s 5/3/1 \nFor Beginners</string>
    <string name="smolovBeta">Smolov (Beta)</string>
    <string name="noNotifications">No Notifications Found</string>
    <string name="hasFollowedYou">has followed you.</string>
    <string name="hasCommentedOnYourPost">has commented on your post.</string>
    <string name="hasReppedYourPost">has repped your post.</string>
    <string name="hasSentYouAProgram">has sent you a program.</string>
    <string name="notifications">Notifications</string>
    <string name="invalidExName">Invalid exercise name:\nCustom exercises cannot begin with a number.</string>
    <string name="searchExercises">Search exercises&#8230;</string>
    <string name="nextSet">Time for your next set!</string>
    <string name="dismiss">Dismiss</string>
    <string name="dismissNow">Dismiss Now</string>
    <string name="autoDismissing">Auto dismissing in&#8230;</string>
    <string name="goToWorkout">Go to Workout</string>
    <string name="channel_name">Liftdom_Assistor_Service</string>
    <string name="channel_description">Liftdom workout assistor notification.</string>
    <string name="channel_name2">Liftdom_Timer_Service</string>
    <string name="channel_description2">Liftdom workout assistor timer notification.</string>
    <string name="title">Liftdom</string>
    <string name="action_settings">Settings</string>
    <string name="chooseFromTemplate">Choose From Programs</string>
    <string name="fromScratch">Build From Scratch</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="bodybuilding">Bodybuilding</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="fitness">General Fitness</string>
    <string name="crossfit">Crossfit</string>
    <string name="strongman">Strongman</string>
    <string name="powerbuilding">Power-building</string>
    <string name="title_activity_discipline_list">disciplineList</string>
    <string name="ppl">P/P/L</string>
    <string name="example">Example Text</string>
    <string name="algHint">(Hint: Remember to check the checkbox of exercises you want this algorithm to apply
        to.)
    </string>
    <string name="programBasedOn">This program is constructed using your profile info. Here you can adjust desired
        values accordingly.
    </string>
    <string name="weightUnit">Weight unit:</string>
    <string name="settings">Settings</string>
    <string name="metricWarning">(Warning: metric support currently unstable)</string>
    <string name="kilos">kg</string>
    <string name="roundWeight">Round algorithm weights to \n nearest common plate weight?</string>
    <string name="title_activity_under_construction">underConstruction</string>
    <string name="title_activity_bodybuilding_programs">bodybuildingPrograms</string>
    <string name="title_activity_pushpulldetails">pushpulldetails</string>
    <string name="customizeYour">Build Your Workout Program:</string>
    <string name="x">x</string>
    <string name="at">\@</string>
    <string name="formatHint">Format: (Sets x Reps @ Weight)</string>
    <string name="saveReminder">Remember to hit save before navigating away from this page.</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="legs">Legs</string>
    <string name="confirm">Confirm</string>
    <string name="confirmColon">Confirm:</string>
    <string name="bench">Bench Press:</string>
    <string name="bbRow">Barbell Row</string>
    <string name="backSquat">Back Squat</string>
    <string name="title_activity_algorithm_results_po_c">AlgorithmResultsPoC</string>
    <string name="smolovStarterTitle">Smolov Setup</string>
    <string name="M">M</string>
    <string name="Tu">TU</string>
    <string name="W">W</string>
    <string name="Th">TH</string>
    <string name="F">F</string>
    <string name="Sa">SA</string>
    <string name="Su">SU</string>
    <string name="comingSoon">Coming Soon!</string>
    <string name="profilePic">Profile Picture:</string>
    <string name="headerImage">Header Image:</string>
    <string name="saveProgress">Save Workout Progress</string>
    <string name="saveState">Save Current Workout State</string>
    <string name="activateStatusBarWA">Activate the Workout Notification bar\n(Check off sets from
        your phone\'s lock screen)</string>
    <string name="deactivateStatusBarWA">De-activate in Notification Bar</string>
    <string name="publicComment">Public Description:</string>
    <string name="resetWorkout">Reset Workout</string>
    <string name="resetAdvice">(Try if sets won\'t load in.)</string>
    <string name="addExercise">(+) Add Exercise</string>
    <string name="removeExercise">(-) Remove Exercise</string>
    <string name="addDay">(+) Add Day Set</string>
    <string name="removeDay">(-) Remove Day Set</string>
    <string name="saveAs">SAVE AS</string>
    <string name="save">SAVE</string>
    <string name="removeDaySet"><b>Remove last day set?</b></string>
    <string name="cm">cm</string>
    <string name="newChat">New Chat</string>
    <string name="sendMessage"> Send Message...</string>
    <string name="sendMessagePlain">Send\nMessage</string>
    <string name="userProfile">User Profile</string>
    <string name="messageSent">Message Sent!</string>
    <string name="messageFailed">Message Failed\n(check your connection)</string>
    <string name="sendProgram">Send Program</string>
    <string name="selectAProgramToSend">Select a Program to Send:</string>
    <string name="programInboxTitle">Any programs that other users send you will be here:</string>
    <string name="noProgramsInInbox">Inbox Empty</string>
    <string name="addSet">(+) Add Set Scheme</string>
    <string name="removeSet">(-) Remove Set Scheme</string>
    <string name="set">S</string>
    <string name="reps">R</string>
    <string name="weight">W</string>
    <string name="title_activity_push_pull_details1">PushPullDetails1</string>
    <string name="close">Close</string>
    <string name="normalPPLR">
        Standard Version
    </string>
    <string name="normalPPLR2">
        &#8211; Recommended
    </string>
    <string name="strengthPPLR">
        Strength Version
    </string>
    <string name="strengthPPLR2">
        &#8211; Lower reps for compound accessories
        \n    (RDLs, presses, pulldowns, leg presses)
        \n &#8211; Weighted chin-ups/pull-ups, weighted dips.
        \n    (By default wll be 4&#8211;8 reps, if you choose bodyweight instead they\'ll be
        normal rep range)
    </string>
    <string name="highRepsPPLR">
        High Reps Version
    </string>
    <string name="highRepsPPLR2">
        &#8211; Accessories are 15&#8211;20 reps instead of 8&#8211;12 reps
    </string>
    <string name="PPLReddit1">
        Choose the format for the days you\'ll be working out:
    </string>
    <string name="pushplpplr">Push/Pull/Legs/Push/Pull/Legs/Rest</string>
    <string name="pullplpplr">Pull/Push/Legs/Pull/Push/Legs/Rest</string>
    <string name="pushplrppl">Push/Pull/Legs/Rest/Push/Pull/Legs</string>
    <string name="pullplrppl">Pull/Push/Legs/Rest/Pull/Push/Legs</string>
    <string name="includeWarmupPPLReddit">Include warmup sets for main lifts?\n(4 sets
        progressing up from empty bar)</string>
    <string name="wontBeShownOnFirstDay">(This won\'t be shown on your first day for each
        main lift as you\'ll be building up from an empty bar anyway)</string>
    <string name="today">Today</string>
    <string name="nextMonday">Next Monday</string>
    <string name="startTodayOrNextMondaySmolov">Would you like to start Smolov today, or begin next Monday?</string>
    <string name="startTodayOrNextMondayPPLReddit">
        Would you like to start Reddit PPL today, or begin next Monday?
    </string>
    <string name="TodaysWorkout">Today\'s Workout</string>
    <string name="autoTake10Off">Automatically take 10% off of this value for working max?</string>
    <string name="roundToNearest5">Round generated workout weights to the nearest 5?</string>
    <string name="pounds">lbs</string>
    <string name="activityFeed">Feed</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>
    <string name="templating">Programming</string>
    <string name="elipses">...</string>
    <string name="exerciseForSmolov">Exercise for Smolov:</string>
    <string name="oneRepMaxForThisEx">Max for this exercise:</string>
</resources>