<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey"
        tools:context="com.liftdom.liftdom.ReleaseNotesActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/releaseNotesTitle"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/liftrGold1"
            android:background="@color/black"
            android:layout_weight="0"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newFeaturesTitle"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newFeaturesText"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:layout_marginBottom="20dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fixesTitle"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fixesText"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:layout_marginBottom="20dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workingOnTitle"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workingOnText"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
                android:layout_marginBottom="20dp"
        />

    </LinearLayout>



    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/closeButton"
            style="@style/buttonStyle1"
            android:text="@string/close"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_weight="0"
    />

</LinearLayout>
