<io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparent"
        android:gravity="center"
        tools:context="com.liftdom.workout_programs.Smolov.SmolovIntroFrag2">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startTodayOrNextMondaySmolov"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="@color/black"
    />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
    >
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayRadioButton"
                android:text="@string/today"
                android:layout_marginEnd="20dp"
                android:textColor="@color/darkGrey"
        />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mondayRadioButton"
                android:text="@string/nextMonday"
                android:textColor="@color/darkGrey"
        />

    </RadioGroup>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/black"
            android:layout_margin="20dp"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exerciseForSmolov"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
    />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseButton"
            android:background="@color/black"
            android:textColor="@color/white"
            style="@style/buttonStyle1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
    />


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneRepMaxForThisEx"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
    >
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/maxWeightEditText"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="16sp"
                android:hint="@string/elipses"
                android:textColor="@color/black"
                android:imeOptions="actionDone"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/unitsView"
                android:text="@string/pounds"
                android:textSize="16sp"
                android:textColor="@color/darkGrey"
        />

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/black"
            android:layout_margin="20dp"
    />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoTake10Off"
            android:textColor="@color/black"
            android:id="@+id/takeOff10"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundToNearest5"
            android:textColor="@color/black"
            android:id="@+id/roundToNearest5"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            />


</io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout>
