<io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context="com.liftdom.workout_programs.PPL_Reddit.PPLRedditIntroFrag1">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startTodayOrNextMondayPPLReddit"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    />

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    >

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/todayRadioButton"
                        android:text="@string/today"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mondayRadioButton"
                        android:text="@string/nextMonday"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

            </RadioGroup>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/white"
                    android:layout_margin="20dp"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/PPLReddit1"
                    android:gravity="center"
            />

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginTop="7dp"
                    >

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pushplpplrRadioButton"
                        android:text="@string/pushplpplr"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pullplpplrRadioButton"
                        android:text="@string/pullplpplr"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pushplrpplRadioButton"
                        android:text="@string/pushplrppl"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pullplrpplRadioButton"
                        android:text="@string/pullplrppl"
                        android:textSize="16sp"
                        android:textColor="@color/grey"
                        android:buttonTint="@color/white"
                        />

            </RadioGroup>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/white"
                    android:layout_margin="20dp"
                    />

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    >

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/normalRB"
                        android:text="@string/normalPPLR"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normalPPLR2"
                        android:textColor="@color/grey"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/strengthRB"
                        android:text="@string/strengthPPLR"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strengthPPLR2"
                        android:textColor="@color/grey"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/highRepsRB"
                        android:text="@string/highRepsPPLR"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:buttonTint="@color/white"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highRepsPPLR2"
                        android:textColor="@color/grey"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="10dp"
                        />

            </RadioGroup>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:background="@color/white"
                    android:layout_margin="20dp"
                    />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/warmupCheckbox"
                        android:text="@string/includeWarmupPPLReddit"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:buttonTint="@color/white"
                        />

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wontBeShownOnFirstDay"
                    android:textSize="13sp"
                    android:textColor="@color/grey"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="200dp"
                    />

        </LinearLayout>

    </ScrollView>

</io.github.dreierf.materialintroscreen.parallax.ParallaxLinearLayout>